# delta-rs

./: Cargo.toml
crates/core/: Cargo.toml
crates/core/src/data_catalog/storage/: mod.rs
crates/core/src/delta_datafusion/: expr.rs  expr_adapter.rs  mod.rs  physical.rs  planner.rs  schema_adapter.rs  schema_null.rs  table_provider.rs  table_provider_old.rs  udtf.rs
crates/core/src/delta_datafusion/cdf/: scan.rs  scan_utils.rs
crates/core/src/delta_datafusion/engine/: file_formats.rs  mod.rs  predicate_conversion.rs  storage.rs
crates/core/src/delta_datafusion/find_files/: logical.rs  mod.rs  physical.rs
crates/core/src/delta_datafusion/table_provider/next/: mod.rs
crates/core/src/delta_datafusion/table_provider/next/scan/: codec.rs  exec.rs  mod.rs  plan.rs
crates/core/src/kernel/: mod.rs  scalars.rs
crates/core/src/kernel/schema/cast/: mod.rs
crates/core/src/kernel/snapshot/: log_data.rs  log_segment.rs  mod.rs  parse.rs  replay.rs  serde.rs  size_limits.rs
crates/core/src/logstore/: mod.rs
crates/core/src/operations/: cdc.rs  load_cdf.rs  update.rs
crates/core/src/operations/cast/: mod.rs
crates/core/src/operations/merge/: barrier.rs  mod.rs
crates/core/src/operations/transaction/: state.rs
crates/core/src/table/: builder.rs  mod.rs
crates/core/tests/: datafusion_table_provider.rs  integration_datafusion.rs
crates/deltalake/src/: lib.rs
crates/hdfs/: Cargo.toml
crates/hdfs/src/: lib.rs
crates/sql/src/: logical_plan.rs  planner.rs
python/: Cargo.toml
python/src/: lib.rs
