[workspace]
members = ["crates/*", "delta-inspect", "python"]
exclude = ["proofs"]
resolver = "2"

[workspace.package]
authors = ["Qingping Hou <dave2008713@gmail.com>"]
rust-version = "1.80"
keywords = ["deltalake", "delta", "datalake"]
readme = "README.md"
edition = "2021"
description = "Native Delta Lake implementation in Rust"
homepage = "https://github.com/delta-io/delta.rs"
license = "Apache-2.0"
documentation = "https://docs.rs/deltalake"
repository = "https://github.com/delta-io/delta.rs"

[profile.release-with-debug]
inherits = "release"
debug = true

# Reducing the debuginfo for the test profile in order to trim the disk and RAM
# usage during development
# <https://github.com/delta-io/delta-rs/issues/1550?
[profile.test]
debug = "line-tables-only"

[workspace.dependencies]
delta_kernel = { version = "0.4.1", features = ["default-engine"] }
#delta_kernel = { path = "../delta-kernel-rs/kernel", features = ["sync-engine"]  }

# arrow
arrow = { version = "53" }
arrow-arith = { version = "53" }
arrow-array = { version = "53", features = ["chrono-tz"] }
arrow-buffer = { version = "53" }
arrow-cast = { version = "53" }
arrow-ipc = { version = "53" }
arrow-json = { version = "53" }
arrow-ord = { version = "53" }
arrow-row = { version = "53" }
arrow-schema = { version = "53" }
arrow-select = { version = "53" }
object_store = { version = "0.11" }
parquet = { version = "53" }

# datafusion
datafusion = { version = "43" }
datafusion-expr = { version = "43" }
datafusion-common = { version = "43" }
datafusion-ffi = { version = "43" }
datafusion-functions = { version = "43" }
datafusion-functions-aggregate = { version = "43" }
datafusion-physical-expr = { version = "43" }
datafusion-physical-plan = { version = "43" }
datafusion-proto = { version = "43" }
datafusion-sql = { version = "43" }

# serde
serde = { version = "1.0.194", features = ["derive"] }
serde_json = "1"

# "stdlib"
bytes = { version = "1" }
chrono = { version = ">0.4.34", default-features = false, features = ["clock"] }
tracing = { version = "0.1", features = ["log"] }
regex = { version = "1" }
thiserror = { version = "2" }
url = { version = "2" }
urlencoding = "2.1.3"
uuid = { version = "1" }

# runtime / async
async-trait = { version = "0.1" }
futures = { version = "0.3" }
tokio = { version = "1" }
num_cpus = { version = "1" }

[patch.crates-io]
datafusion = { git = 'https://github.com/hstack/arrow-datafusion.git', branch = 'main' }
datafusion-catalog = { git = 'https://github.com/hstack/arrow-datafusion.git', branch = 'main' }
datafusion-common = { git = 'https://github.com/hstack/arrow-datafusion.git', branch = 'main' }
datafusion-common-runtime = { git = 'https://github.com/hstack/arrow-datafusion.git', branch = 'main' }
datafusion-execution = { git = 'https://github.com/hstack/arrow-datafusion.git', branch = 'main' }
datafusion-expr = { git = 'https://github.com/hstack/arrow-datafusion.git', branch = 'main' }
datafusion-expr-common = { git = 'https://github.com/hstack/arrow-datafusion.git', branch = 'main' }
datafusion-ffi = { git = 'https://github.com/hstack/arrow-datafusion.git', branch = 'main' }
datafusion-functions = { git = 'https://github.com/hstack/arrow-datafusion.git', branch = 'main' }
datafusion-functions-aggregate = { git = 'https://github.com/hstack/arrow-datafusion.git', branch = 'main' }
datafusion-functions-aggregate-common = { git = 'https://github.com/hstack/arrow-datafusion.git', branch = 'main' }
datafusion-functions-nested = { git = 'https://github.com/hstack/arrow-datafusion.git', branch = 'main' }
datafusion-functions-window = { git = 'https://github.com/hstack/arrow-datafusion.git', branch = 'main' }
datafusion-optimizer = { git = 'https://github.com/hstack/arrow-datafusion.git', branch = 'main' }
datafusion-physical-expr = { git = 'https://github.com/hstack/arrow-datafusion.git', branch = 'main' }
datafusion-physical-expr-common = { git = 'https://github.com/hstack/arrow-datafusion.git', branch = 'main' }
datafusion-physical-optimizer = { git = 'https://github.com/hstack/arrow-datafusion.git', branch = 'main' }
datafusion-physical-plan = { git = 'https://github.com/hstack/arrow-datafusion.git', branch = 'main' }
datafusion-proto = { git = 'https://github.com/hstack/arrow-datafusion.git', branch = 'main' }
datafusion-proto-common = { git = 'https://github.com/hstack/arrow-datafusion.git', branch = 'main' }
datafusion-sql = { git = 'https://github.com/hstack/arrow-datafusion.git', branch = 'main' }
datafusion-substrait = { git = 'https://github.com/hstack/arrow-datafusion.git', branch = 'main' }
